crates/builder/src/parser/snapshots/access_control_function_with_paren.snap
---
source: crates/builder/src/parser/converter.rs
expression: "convert_root(parsed.root_node(),\nr#\"\n            @postgres\n            module TestModule {\n                @access(self.concerts.some((c) => c.id == 1))\n                type Venue {\n                    concerts: Set<Concert>?\n                }\n\n                type Concert {\n                    @pk id: Int = autoIncrement()\n                    venue: Venue\n                }\n            }\n        \"#.as_bytes(),\nfile_span, Path :: new(\"input.exo\")).unwrap()"
---
types: []
modules:
  - name: TestModule
    annotations:
      - name: postgres
        params: None
    types:
      - name: Venue
        kind: Type
        fields:
          - name: concerts
            typ:
              Optional:
                Plain:
                  - ~
                  - Set
                  - - Plain:
                        - ~
                        - Concert
                        - []
                        - ~
                  - ~
            annotations: []
            default_value: ~
            doc_comments: ~
        fragment_references: []
        annotations:
          - name: access
            params:
              Single:
                - AccessExpr:
                    FieldSelection:
                      Select:
                        - Select:
                            - Single:
                                - Identifier:
                                    - self
                                    - ~
                                - ~
                            - Identifier:
                                - concerts
                                - ~
                            - ~
                        - HofCall:
                            name:
                              - some
                            param_name:
                              - c
                            expr:
                              RelationalOp:
                                Eq:
                                  - FieldSelection:
                                      Select:
                                        - Single:
                                            - Identifier:
                                                - c
                                                - ~
                                            - ~
                                        - Identifier:
                                            - id
                                            - ~
                                        - ~
                                  - Literal:
                                      Number:
                                        - "1"
                                  - ~
                            typ: ~
                        - ~
        doc_comments: ~
      - name: Concert
        kind: Type
        fields:
          - name: id
            typ:
              Plain:
                - ~
                - Int
                - []
                - ~
            annotations:
              - name: pk
                params: None
            default_value:
              kind:
                Function:
                  - autoIncrement
                  - []
            doc_comments: ~
          - name: venue
            typ:
              Plain:
                - ~
                - Venue
                - []
                - ~
            annotations: []
            default_value: ~
            doc_comments: ~
        fragment_references: []
        annotations: []
        doc_comments: ~
    enums: []
    methods: []
    interceptors: []
    base_exofile: input.exo
    doc_comments: ~
imports: []
declaration_doc_comments: ~
